// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ChatTextArea unchanged 1`] = `
<div>
  <div
    class="memori-chat-textarea"
    data-testid="chat-textarea"
  >
    <div
      class="memori-chat-textarea--inner"
      style="height: 36px;"
    >
      <textarea
        class="memori-chat-textarea--input"
        maxlength="100000"
        placeholder="chat.placeholder"
        style="height: 36px;"
      />
    </div>
  </div>
</div>
`;

exports[`renders ChatTextArea with long text unchanged 1`] = `
<div>
  <div
    class="memori-chat-textarea"
    data-testid="chat-textarea"
  >
    <div
      class="memori-chat-textarea--inner"
      style="height: 36px;"
    >
      <textarea
        class="memori-chat-textarea--input"
        maxlength="100000"
        placeholder="chat.placeholder"
        style="height: 36px;"
      >
        Suspendisse sit amet volutpat velit. Nunc at commodo tortor, id rutrum nunc. Vivamus condimentum vel nunc et congue. Ut laoreet imperdiet nisi ac finibus. Suspendisse molestie risus a justo sagittis efficitur. Suspendisse sit amet volutpat velit. Nunc at commodo tortor, id rutrum nunc. Vivamus condimentum vel nunc et congue. Ut laoreet imperdiet nisi ac finibus. Suspendisse molestie risus a justo sagittis efficitur.
      </textarea>
    </div>
  </div>
</div>
`;

exports[`renders ChatTextArea with value unchanged 1`] = `
<div>
  <div
    class="memori-chat-textarea"
    data-testid="chat-textarea"
  >
    <div
      class="memori-chat-textarea--inner"
      style="height: 36px;"
    >
      <textarea
        class="memori-chat-textarea--input"
        maxlength="100000"
        placeholder="chat.placeholder"
        style="height: 36px;"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </textarea>
    </div>
  </div>
</div>
`;
